Switch up margin collapse technique to prevent transition scrollbars

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,7 +3,7 @@
 @import "./variables.scss";
 
 #root {
-  overflow: auto; // Prevent margin collapsing on body
+  padding-top: 1px; // Prevent margin collapsing on body
 }
 
 html {
